refactoring elasticsearch yml

--- a/config/elasticsearch/elasticsearch-kubernetes.yaml
+++ b/config/elasticsearch/elasticsearch-kubernetes.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -34,3 +35,36 @@ spec:
       - name: elasticsearch-data
         persistentVolumeClaim:
           claimName: elasticsearch-data
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  labels:
+    componet: elasticsearch
+  name: elasticsearch-data
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 500Mi
+status: {}
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: elasticsearch
+  labels:
+    component: elasticsearch
+spec:
+  ports:
+  - port: 9200
+    targetPort: 9200
+    protocol: TCP
+    name: http
+  - port: 9300
+    targetPort: 9300
+    protocol: TCP
+    name: http2
+  selector:
+    component: elasticsearch
