--- a/config/kibana/kibana-kubernetes.yaml
+++ b/config/kibana/kibana-kubernetes.yaml
@@ -4,40 +4,55 @@ kind: Deployment
 metadata:
   name: kibana
   labels:
-    componet: kibana
+    app: kibana
 spec:
   replicas: 1
   selector:
     matchLabels:
-      component: kibana
+      app: kibana
   template:
     metadata:
       labels:
-        component: kibana
+        app: kibana
     spec:
       containers:
         - name: kibana
           image: docker.elastic.co/kibana/kibana:6.5.4
-          env:
-          - name: ELASTICSEARCH_URL
-            value: http://elasticsearch:9200
-          - name: XPACK_SECURITY_ENABLED
-            value: "true"
           ports:
             - containerPort: 5601
               name: http
               protocol: TCP
+          volumeMounts:
+            - name: kibana-config
+              mountPath: /usr/share/kibana/kibana.yml
+              subPath: kibana.yml
+      volumes:
+        - name: kibana-config
+          configMap:
+            name: kibana-config
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: kibana-config
+  labels:
+    app: kibana-config
+data:
+  elasticsearch.yml: |-
+    server.name: kibana
+    server.host: "0"
+    elasticsearch.url: http://elasticsearch:9200
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: kibana
   labels:
-    component: kibana
+    app: kibana
 spec:
   type: LoadBalancer
   selector:
-    component: kibana
+    app: kibana
   ports:
     - name: http
       port: 5601
