--- a/config/filebeat/filebeat-kubernetes.yaml
+++ b/config/filebeat/filebeat-kubernetes.yaml
@@ -5,7 +5,7 @@ metadata:
   name: filebeat-config
   namespace: default
   labels:
-    k8s-app: filebeat
+    app: filebeat
 data:
   filebeat.yml: |-
     filebeat.config:
@@ -19,22 +19,20 @@ data:
         # Reload module configs as they change:
         reload.enabled: false
 
-    # To enable hints based autodiscover, remove `filebeat.config.inputs` configuration and uncomment this:
-    #filebeat.autodiscover:
-    #  providers:
-    #    - type: kubernetes
-    #      hints.enabled: true
-
     processors:
-      - add_cloud_metadata:
+      - add_cloud_metadata: ~
 
-    cloud.id: ${ELASTIC_CLOUD_ID}
-    cloud.auth: ${ELASTIC_CLOUD_AUTH}
+    setup.kibana:
+      host: "kibana:5601"
 
-    output.elasticsearch:
-      hosts: ['${ELASTICSEARCH_HOST:elasticsearch}:${ELASTICSEARCH_PORT:9200}']
-      username: ${ELASTICSEARCH_USERNAME}
-      password: ${ELASTICSEARCH_PASSWORD}
+    output.logstash:
+      hosts: ["logstash:5555"]
+
+    xpack.monitoring:
+      enabled: true
+      elasticsearch:
+        hosts: ["http://elasticsearch:9200"]
+
 ---
 apiVersion: v1
 kind: ConfigMap
@@ -42,7 +40,7 @@ metadata:
   name: filebeat-inputs
   namespace: default
   labels:
-    k8s-app: filebeat
+    app: filebeat
 data:
   kubernetes.yml: |-
     - type: docker
@@ -58,12 +56,12 @@ metadata:
   name: filebeat
   namespace: default
   labels:
-    k8s-app: filebeat
+    app: filebeat
 spec:
   template:
     metadata:
       labels:
-        k8s-app: filebeat
+        app: filebeat
     spec:
       serviceAccountName: filebeat
       terminationGracePeriodSeconds: 30
@@ -74,19 +72,6 @@ spec:
           "-c", "/etc/filebeat.yml",
           "-e",
         ]
-        env:
-        - name: ELASTICSEARCH_HOST
-          value: elasticsearch
-        - name: ELASTICSEARCH_PORT
-          value: "9200"
-        - name: ELASTICSEARCH_USERNAME
-          value: elastic
-        - name: ELASTICSEARCH_PASSWORD
-          value: changeme
-        - name: ELASTIC_CLOUD_ID
-          value:
-        - name: ELASTIC_CLOUD_AUTH
-          value:
         securityContext:
           runAsUser: 0
           # If using Red Hat OpenShift uncomment this:
@@ -146,7 +131,7 @@ kind: ClusterRole
 metadata:
   name: filebeat
   labels:
-    k8s-app: filebeat
+    app: filebeat
 rules:
 - apiGroups: [""] # "" indicates the core API group
   resources:
@@ -163,5 +148,5 @@ metadata:
   name: filebeat
   namespace: default
   labels:
-    k8s-app: filebeat
+    app: filebeat
 ---
