--- a/config/apm-server/apm-server-kubernetes.yaml
+++ b/config/apm-server/apm-server-kubernetes.yaml
@@ -1,12 +1,12 @@
 ---
 apiVersion: extensions/v1beta1
-kind: Deployment
+kind: DaemonSet
 metadata:
   name: apm-server
+  namespace: default
+  labels:
+    app: apm-server
 spec:
-  # this replicas value is default
-  # modify it according to your case
-  replicas: 1
   template:
     metadata:
       labels:
