--- a/config/metricbeat/metricbeat-kubernetes.yaml
+++ b/config/metricbeat/metricbeat-kubernetes.yaml
@@ -223,7 +223,7 @@ data:
         #- event
       period: 10s
       host: ${NODE_NAME}
-      hosts: ["kube-state-metrics:8080"]
+      hosts: ["kube-state-metrics.kube-system.svc.cluster.local:8080"]
 ---
 # Deploy singleton instance in the whole cluster for some unique data sources, like kube-state-metrics
 apiVersion: apps/v1beta1
