--- a/config/elasticsearch/elasticsearch-kubernetes.yaml
+++ b/config/elasticsearch/elasticsearch-kubernetes.yaml
@@ -16,21 +16,12 @@ spec:
         app: elasticsearch
     spec:
       initContainers:
-      - name: init-sysctl
-        image: busybox:1.27.2
-        command:
-        - sysctl
-        - -w
-        - vm.max_map_count=262144
-        resources:
-          limits:
-            cpu: 10m
-            memory: 50Mi
-          requests:
-            cpu: 10m
-            memory: 50Mi
+      - name: configure-sysctl
         securityContext:
+          runAsUser: 0
           privileged: true
+        image: "busybox:1.27.2"
+        command: ["sysctl", "-w", "vm.max_map_count=262144"]
       containers:
       - env:
           - name: ES_JAVA_OPTS
@@ -42,24 +33,46 @@ spec:
           protocol: TCP
         - containerPort: 9300
           protocol: TCP
-        livenessProbe:
-          initialDelaySeconds: 90
-          periodSeconds: 10
-          timeoutSeconds: 5
-          successThreshold: 1
-          failureThreshold: 5
-          httpGet:
-            path: /_cluster/health?local=true
-            port: 9200
+          name: transport
         readinessProbe:
-          initialDelaySeconds: 90
+          failureThreshold: 3
+          initialDelaySeconds: 10
           periodSeconds: 10
+          successThreshold: 3
           timeoutSeconds: 5
-          successThreshold: 1
-          failureThreshold: 5
-          httpGet:
-            path: /_cluster/health?local=true
-            port: 9200
+          exec:
+            command: 
+              - sh
+              - -c
+              - |
+                #!/usr/bin/env bash -e
+                # If the node is starting up wait for the cluster to be green
+                # Once it has started only check that the node itself is responding
+                START_FILE=/tmp/.es_start_file
+
+                http () {
+                    local path="${1}"
+                    if [ -n "${ELASTIC_USERNAME}" ] && [ -n "${ELASTIC_PASSWORD}" ]; then
+                      BASIC_AUTH="-u ${ELASTIC_USERNAME}:${ELASTIC_PASSWORD}"
+                    else
+                      BASIC_AUTH=''
+                    fi
+                    curl -XGET -s -k --fail ${BASIC_AUTH} http://127.0.0.1:9200${path}
+                }
+  
+                if [ -f "${START_FILE}" ]; then
+                    echo 'Elasticsearch is already running, lets check the node is healthy'
+                    http "/"
+                else
+                    echo 'Waiting for elasticsearch cluster to become green'
+                    if http "/_cluster/health?wait_for_status=green&timeout=1s" ; then
+                        touch ${START_FILE}
+                        exit 0
+                    else
+                        echo 'Cluster is not yet green'
+                        exit 1
+                    fi
+                fi
         volumeMounts:
           - name: elasticsearch-data
             mountPath: /usr/share/elasticsearch/data
