--- a/config/metricbeat/metricbeat-kubernetes.yaml
+++ b/config/metricbeat/metricbeat-kubernetes.yaml
@@ -1,4 +1,89 @@
 ---
+---
+# Deploy a Metricbeat instance per node for node metrics retrieval
+apiVersion: extensions/v1beta1
+kind: DaemonSet
+metadata:
+  name: metricbeat
+  namespace: default
+  labels:
+    app: metricbeat
+spec:
+  template:
+    metadata:
+      labels:
+        app: metricbeat
+    spec:
+      serviceAccountName: metricbeat
+      terminationGracePeriodSeconds: 30
+      hostNetwork: true
+      dnsPolicy: ClusterFirstWithHostNet
+      containers:
+      - name: metricbeat
+        image: docker.elastic.co/beats/metricbeat:6.5.4
+        args: [
+          "-e",
+          "-system.hostfs=/hostfs",
+        ]
+        env:
+        - name: POD_NAMESPACE
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.namespace
+        - name: NODE_NAME
+          valueFrom:
+            fieldRef:
+              fieldPath: spec.nodeName
+        securityContext:
+          runAsUser: 0
+        resources:
+          limits:
+            memory: 200Mi
+          requests:
+            cpu: 100m
+            memory: 100Mi
+        volumeMounts:
+        - name: config
+          mountPath: /usr/share/metricbeat/metricbeat.yml
+          readOnly: true
+          subPath: metricbeat.yml
+        - name: modules
+          mountPath: /usr/share/metricbeat/modules.d
+          readOnly: true
+        - name: data
+          mountPath: /usr/share/metricbeat/data
+        - name: proc
+          mountPath: /hostfs/proc
+          readOnly: true
+        - name: cgroup
+          mountPath: /hostfs/sys/fs/cgroup
+          readOnly: true
+        - name: dockersock
+          mountPath: /var/run/docker.sock
+          readOnly: true
+      volumes:
+      - name: proc
+        hostPath:
+          path: /proc
+      - name: cgroup
+        hostPath:
+          path: /sys/fs/cgroup
+      - name: dockersock
+        hostPath:
+          path: /var/run/docker.sock
+      - name: config
+        configMap:
+          defaultMode: 0600
+          name: metricbeat-daemonset-config
+      - name: modules
+        configMap:
+          defaultMode: 0600
+          name: metricbeat-daemonset-modules
+      - name: data
+        hostPath:
+          path: /var/lib/metricbeat-data
+          type: DirectoryOrCreate
+---
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -15,22 +100,25 @@ data:
       reload.enabled: false
 
     # To enable hints based autodiscover uncomment this:
-    #metricbeat.autodiscover:
-    #  providers:
-    #    - type: kubernetes
-    #      host: ${NODE_NAME}
-    #      hints.enabled: true
+    metricbeat.autodiscover:
+     providers:
+       - type: kubernetes
+         host: ${NODE_NAME}
+         hints.enabled: true
 
     processors:
-      - add_cloud_metadata:
-
-    cloud.id: ${ELASTIC_CLOUD_ID}
-    cloud.auth: ${ELASTIC_CLOUD_AUTH}
+      - add_cloud_metadata: ~
+      - add_host_metadata:
+          netinfo.enabled: false
 
     output.elasticsearch:
-      hosts: ['${ELASTICSEARCH_HOST:elasticsearch}:${ELASTICSEARCH_PORT:9200}']
-      username: ${ELASTICSEARCH_USERNAME}
-      password: ${ELASTICSEARCH_PASSWORD}
+      hosts: ['elasticsearch:9200']
+
+    setup.kibana:
+      host: "http://kibana:5601"
+
+    xpack.monitoring:
+      enabled: true
 ---
 apiVersion: v1
 kind: ConfigMap
@@ -77,153 +165,6 @@ data:
       period: 10s
       host: ${NODE_NAME}
       hosts: ["localhost:10255"]
-      # If using Red Hat OpenShift remove the previous hosts entry and 
-      # uncomment these settings:
-      #hosts: ["https://${HOSTNAME}:10250"]
-      #bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
-      #ssl.certificate_authorities:
-        #- /var/run/secrets/kubernetes.io/serviceaccount/service-ca.crt
----
-# Deploy a Metricbeat instance per node for node metrics retrieval
-apiVersion: extensions/v1beta1
-kind: DaemonSet
-metadata:
-  name: metricbeat
-  namespace: default
-  labels:
-    app: metricbeat
-spec:
-  template:
-    metadata:
-      labels:
-        app: metricbeat
-    spec:
-      serviceAccountName: metricbeat
-      terminationGracePeriodSeconds: 30
-      hostNetwork: true
-      dnsPolicy: ClusterFirstWithHostNet
-      containers:
-      - name: metricbeat
-        image: docker.elastic.co/beats/metricbeat:6.5.4
-        args: [
-          "-c", "/etc/metricbeat.yml",
-          "-e",
-          "-system.hostfs=/hostfs",
-        ]
-        env:
-        - name: ELASTICSEARCH_HOST
-          value: elasticsearch
-        - name: ELASTICSEARCH_PORT
-          value: "9200"
-        - name: ELASTICSEARCH_USERNAME
-          value: elastic
-        - name: ELASTICSEARCH_PASSWORD
-          value: changeme
-        - name: ELASTIC_CLOUD_ID
-          value:
-        - name: ELASTIC_CLOUD_AUTH
-          value:
-        - name: XPACK_SECURITY_ENABLED
-          value: "true"
-        - name: NODE_NAME
-          valueFrom:
-            fieldRef:
-              fieldPath: spec.nodeName
-        securityContext:
-          runAsUser: 0
-        resources:
-          limits:
-            memory: 200Mi
-          requests:
-            cpu: 100m
-            memory: 100Mi
-        volumeMounts:
-        - name: config
-          mountPath: /etc/metricbeat.yml
-          readOnly: true
-          subPath: metricbeat.yml
-        - name: modules
-          mountPath: /usr/share/metricbeat/modules.d
-          readOnly: true
-        - name: dockersock
-          mountPath: /var/run/docker.sock
-        - name: proc
-          mountPath: /hostfs/proc
-          readOnly: true
-        - name: cgroup
-          mountPath: /hostfs/sys/fs/cgroup
-          readOnly: true
-      volumes:
-      - name: proc
-        hostPath:
-          path: /proc
-      - name: cgroup
-        hostPath:
-          path: /sys/fs/cgroup
-      - name: dockersock
-        hostPath:
-          path: /var/run/docker.sock
-      - name: config
-        configMap:
-          defaultMode: 0600
-          name: metricbeat-daemonset-config
-      - name: modules
-        configMap:
-          defaultMode: 0600
-          name: metricbeat-daemonset-modules
-      - name: data
-        hostPath:
-          path: /var/lib/metricbeat-data
-          type: DirectoryOrCreate
----
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: metricbeat-deployment-config
-  namespace: default
-  labels:
-    app: metricbeat
-data:
-  metricbeat.yml: |-
-    metricbeat.config.modules:
-      # Mounted `metricbeat-daemonset-modules` configmap:
-      path: ${path.config}/modules.d/*.yml
-      # Reload module configs as they change:
-      reload.enabled: false
-
-    processors:
-      - add_cloud_metadata:
-
-    cloud.id: ${ELASTIC_CLOUD_ID}
-    cloud.auth: ${ELASTIC_CLOUD_AUTH}
-
-    output.elasticsearch:
-      hosts: ['${ELASTICSEARCH_HOST:elasticsearch}:${ELASTICSEARCH_PORT:9200}']
-      username: ${ELASTICSEARCH_USERNAME}
-      password: ${ELASTICSEARCH_PASSWORD}
----
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: metricbeat-deployment-modules
-  namespace: default
-  labels:
-    app: metricbeat
-data:
-  # This module requires `kube-state-metrics` up and running under `kube-system` namespace
-  kubernetes.yml: |-
-    - module: kubernetes
-      metricsets:
-        - state_node
-        - state_deployment
-        - state_replicaset
-        - state_pod
-        - state_container
-        # Uncomment this to get k8s events:
-        #- event
-      period: 10s
-      host: ${NODE_NAME}
-      hosts: ["kube-state-metrics.kube-system.svc.cluster.local:8080"]
 ---
 # Deploy singleton instance in the whole cluster for some unique data sources, like kube-state-metrics
 apiVersion: apps/v1beta1
@@ -246,24 +187,13 @@ spec:
       - name: metricbeat
         image: docker.elastic.co/beats/metricbeat:6.5.4
         args: [
-          "-c", "/etc/metricbeat.yml",
-          "-e",
+          "-e"
         ]
         env:
-        - name: ELASTICSEARCH_HOST
-          value: elasticsearch
-        - name: ELASTICSEARCH_PORT
-          value: "9200"
-        - name: ELASTICSEARCH_USERNAME
-          value: elastic
-        - name: ELASTICSEARCH_PASSWORD
-          value: changeme
-        - name: ELASTIC_CLOUD_ID
-          value:
-        - name: ELASTIC_CLOUD_AUTH
-          value:
-        - name: XPACK_SECURITY_ENABLED
-          value: "true"
+        - name: POD_NAMESPACE
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.namespace
         - name: NODE_NAME
           valueFrom:
             fieldRef:
@@ -278,7 +208,7 @@ spec:
             memory: 100Mi
         volumeMounts:
         - name: config
-          mountPath: /etc/metricbeat.yml
+          mountPath: /usr/share/metricbeat/metricbeat.yml
           readOnly: true
           subPath: metricbeat.yml
         - name: modules
@@ -293,6 +223,55 @@ spec:
         configMap:
           defaultMode: 0600
           name: metricbeat-deployment-modules
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: metricbeat-deployment-config
+  namespace: default
+  labels:
+    app: metricbeat
+data:
+  metricbeat.yml: |-
+    metricbeat.config.modules:
+      # Mounted `metricbeat-daemonset-modules` configmap:
+      path: ${path.config}/modules.d/*.yml
+      # Reload module configs as they change:
+      reload.enabled: false
+      
+    processors:
+      - add_cloud_metadata: ~
+
+    output.elasticsearch:
+      hosts: ['elasticsearch:9200']
+
+    setup.kibana:
+      host: "http://kibana:5601"
+
+    xpack.monitoring:
+      enabled: true
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: metricbeat-deployment-modules
+  namespace: default
+  labels:
+    app: metricbeat
+data:
+  # This module requires `kube-state-metrics` up and running under `kube-system` namespace
+  kubernetes.yml: |-
+    - module: kubernetes
+      metricsets:
+        - state_node
+        - state_deployment
+        - state_replicaset
+        - state_pod
+        - state_container
+        - event
+      period: 10s
+      host: ${NODE_NAME}
+      hosts: ["kube-state-metrics.kube-system.svc.cluster.local:8080"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRoleBinding
@@ -344,4 +323,3 @@ metadata:
   namespace: default
   labels:
     app: metricbeat
----
