--- a/config/metricbeat/metricbeat-kubernetes.yaml
+++ b/config/metricbeat/metricbeat-kubernetes.yaml
@@ -1,5 +1,4 @@
 ---
----
 # Deploy a Metricbeat instance per node for node metrics retrieval
 apiVersion: extensions/v1beta1
 kind: DaemonSet
@@ -238,7 +237,7 @@ data:
       path: ${path.config}/modules.d/*.yml
       # Reload module configs as they change:
       reload.enabled: false
-      
+
     processors:
       - add_cloud_metadata: ~
 
@@ -323,3 +322,39 @@ metadata:
   namespace: default
   labels:
     app: metricbeat
+---
+apiVersion: batch/v1
+kind: Job
+metadata:
+  namespace: default
+  name: metricbeat-dashboard-init
+spec:
+  template:
+    spec:
+      containers:
+        - name: metricbeat-template-init
+          image: docker.elastic.co/beats/metricbeat:6.5.4
+          command: [ "metricbeat", "setup", "--dashboards",
+                     "-E", "output.logstash.enabled=false",
+                     "-E", 'output.elasticsearch.hosts=["elasticsearch:9200"]',
+                     "-E", 'setup.kibana.host="kibana:5601"' ]
+      restartPolicy: Never
+  backoffLimit: 4
+---
+apiVersion: batch/v1
+kind: Job
+metadata:
+  namespace: default
+  name: metricbeat-template-init
+spec:
+  template:
+    spec:
+      containers:
+        - name: metricbeat-template-init
+          image: docker.elastic.co/beats/metricbeat:6.5.4
+          command: [ "metricbeat", "setup", "--template",
+                     "-E", "output.logstash.enabled=false",
+                     "-E", 'output.elasticsearch.hosts=["elasticsearch:9200"]',
+                     "-E", 'setup.kibana.host="kibana:5601"' ]
+      restartPolicy: Never
+  backoffLimit: 4
