--- a/config/auditbeat/auditbeat-kubernetes.yaml
+++ b/config/auditbeat/auditbeat-kubernetes.yaml
@@ -32,6 +32,18 @@ data:
 
     setup.kibana:
           host: "kibana:5601"
+
+    setup:
+      kibana:
+        host: "http://kibana:5601"
+      dashboards:
+        enabled: true
+        index: "auditbeat-*"
+        retry:
+          enabled: true
+          interval: 30
+      template:
+        enabled: true
 ---
 apiVersion: v1
 kind: ConfigMap
