--- a/config/auditbeat/auditbeat-kubernetes.yaml
+++ b/config/auditbeat/auditbeat-kubernetes.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: auditbeat-config
-  namespace: default
+  namespace: pets
   labels:
     app: auditbeat
 data:
@@ -49,7 +49,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: auditbeat-daemonset-modules
-  namespace: default
+  namespace: pets
   labels:
     app: auditbeat
 data:
@@ -76,7 +76,7 @@ apiVersion: extensions/v1beta1
 kind: DaemonSet
 metadata:
   name: auditbeat
-  namespace: default
+  namespace: pets
   labels:
     app: auditbeat
 spec:
@@ -167,7 +167,7 @@ metadata:
 subjects:
 - kind: ServiceAccount
   name: auditbeat
-  namespace: default
+  namespace: pets
 roleRef:
   kind: ClusterRole
   name: auditbeat
@@ -191,7 +191,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: auditbeat
-  namespace: default
+  namespace: pets
   labels:
     app: auditbeat
 ---
