--- a/config/filebeat/filebeat-kubernetes.yaml
+++ b/config/filebeat/filebeat-kubernetes.yaml
@@ -3,7 +3,7 @@ apiVersion: extensions/v1beta1
 kind: DaemonSet
 metadata:
   name: filebeat
-  namespace: default
+  namespace: pets
   labels:
     app: filebeat
 spec:
@@ -65,7 +65,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: filebeat-config
-  namespace: default
+  namespace: pets
   labels:
     app: filebeat
 data:
@@ -112,7 +112,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: filebeat-inputs
-  namespace: default
+  namespace: pets
   labels:
     app: filebeat
 data:
@@ -131,7 +131,7 @@ metadata:
 subjects:
 - kind: ServiceAccount
   name: filebeat
-  namespace: default
+  namespace: pets
 roleRef:
   kind: ClusterRole
   name: filebeat
@@ -157,6 +157,6 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: filebeat
-  namespace: default
+  namespace: pets
   labels:
     app: filebeat
