--- a/config/heartbeat/heartbeat-kubernetes.yaml
+++ b/config/heartbeat/heartbeat-kubernetes.yaml
@@ -3,7 +3,7 @@ apiVersion: extensions/v1beta1
 kind: DaemonSet
 metadata:
   name: heartbeat
-  namespace: default
+  namespace: pets
   labels:
     app: heartbeat
 spec:
@@ -49,7 +49,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: heartbeat-config
-  namespace: default
+  namespace: pets
   labels:
     app: heartbeat
 data:
@@ -104,7 +104,7 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: heartbeat
-    namespace: default
+    namespace: pets
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
@@ -123,6 +123,6 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: heartbeat
-  namespace: default
+  namespace: pets
   labels:
     app: heartbeat
