--- a/config/kibana/kibana-kubernetes.yaml
+++ b/config/kibana/kibana-kubernetes.yaml
@@ -3,6 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: kibana
+  namespace: pets
   labels:
     app: kibana
 spec:
@@ -35,6 +36,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: kibana-config
+  namespace: pets
   labels:
     app: kibana-config
 data:
@@ -47,6 +49,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: kibana
+  namespace: pets
   labels:
     app: kibana
 spec:
