--- a/config/logstash/logstash-kubernetes.yaml
+++ b/config/logstash/logstash-kubernetes.yaml
@@ -3,6 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: logstash
+  namespace: pets
   labels:
     app: logstash
 spec:
@@ -44,6 +45,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: logstash-config
+  namespace: pets
   labels:
     app: logstash-config
 data:
@@ -59,6 +61,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: logstash-config-pipeline
+  namespace: pets
   labels:
     app: logstash-config-pipeline
 data:
@@ -94,6 +97,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: logstash
+  namespace: pets
   labels:
     app: logstash
 spec:
