--- a/config/metricbeat/metricbeat-kubernetes.yaml
+++ b/config/metricbeat/metricbeat-kubernetes.yaml
@@ -4,7 +4,7 @@ apiVersion: extensions/v1beta1
 kind: DaemonSet
 metadata:
   name: metricbeat
-  namespace: default
+  namespace: pets
   labels:
     app: metricbeat
 spec:
@@ -87,7 +87,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: metricbeat-daemonset-config
-  namespace: default
+  namespace: pets
   labels:
     app: metricbeat
 data:
@@ -123,7 +123,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: metricbeat-daemonset-modules
-  namespace: default
+  namespace: pets
   labels:
     app: metricbeat
 data:
@@ -170,7 +170,7 @@ apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
   name: metricbeat
-  namespace: default
+  namespace: pets
   labels:
     app: metricbeat
 spec:
@@ -227,7 +227,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: metricbeat-deployment-config
-  namespace: default
+  namespace: pets
   labels:
     app: metricbeat
 data:
@@ -266,7 +266,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: metricbeat-deployment-modules
-  namespace: default
+  namespace: pets
   labels:
     app: metricbeat
 data:
@@ -291,7 +291,7 @@ metadata:
 subjects:
 - kind: ServiceAccount
   name: metricbeat
-  namespace: default
+  namespace: pets
 roleRef:
   kind: ClusterRole
   name: metricbeat
@@ -331,6 +331,6 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: metricbeat
-  namespace: default
+  namespace: pets
   labels:
     app: metricbeat
