--- a/config/todo-client/todo-client-kubernetes.yaml
+++ b/config/todo-client/todo-client-kubernetes.yaml
@@ -3,6 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: todo-client
+  namespace: pets
   labels:
     componet: todo-client
 spec:
@@ -40,6 +41,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: todo-client
+  namespace: pets
   labels:
     component: todo-client
 spec:
