--- a/config/todo-server/todo-server-kubernetes.yaml
+++ b/config/todo-server/todo-server-kubernetes.yaml
@@ -3,6 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: todo-server
+  namespace: pets
   labels:
     componet: todo-server
 spec:
@@ -38,6 +39,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: todo-server
+  namespace: pets
   labels:
     component: todo-server
 spec:
