kafka integration working with filebeat, heartbeat, auditbeat, packetbeat logstash is now deployment updated bootstrap/teardown added some metricbeat modules added metricbeat template job

--- a/k8s-specs/beats/auditbeat/configmap.yml
+++ b/k8s-specs/beats/auditbeat/configmap.yml
@@ -17,10 +17,19 @@ data:
     processors:
       - add_cloud_metadata:
 
-    xpack.monitoring.enabled: true
+    xpack.monitoring:
+      enabled: true
+      elasticsearch:
+        hosts: ["http://elasticsearch:9200"]
 
-    output.elasticsearch:
-      hosts: ['http://elasticsearch:9200']
+    output.kafka:
+      hosts: ["kafka:9092"]
+      topic: 'auditbeat'
+      partition.round_robin:
+        reachable_only: false
+      required_acks: 1
+      compression: gzip
+      max_message_bytes: 1000000
 
     setup:
       kibana:
