--- a/k8s-specs/logstash/configmap.yml
+++ b/k8s-specs/logstash/configmap.yml
@@ -8,12 +8,10 @@ metadata:
     app: logstash-config
 data:
   logstash.yml: |-
-    http.host: "0.0.0.0"
-    path.config: /usr/share/logstash/pipeline
     xpack:
       monitoring:
-      enabled: true
-      elasticsearch.url: http://elasticsearch:9200
+        enabled: true
+        elasticsearch.url: http://elasticsearch:9200
 ---
 apiVersion: v1
 kind: ConfigMap
@@ -21,32 +19,83 @@ metadata:
   name: logstash-config-pipeline
   namespace: pets
   labels:
-    app: logstash-config-pipeline
+    app: logstash
 data:
-  logstash.conf: |-
+  input_main: |-
     input {
-      beats {
-          port => 5555
+      kafka {
+        bootstrap_servers => "kafka:9092"
+        topics => ["filebeat"]
+        codec => "json"
+        tags => ["filebeat"]
+        enable_metric => "true"
+        type => "filebeat"
       }
+      kafka {
+        bootstrap_servers => "kafka:9092"
+        topics => ["packetbeat"]
+        codec => "json"
+        tags => ["packetbeat"]
+        enable_metric => "true"
+        type => "log"
+        client_id => "packetbeat"
+      }
+      kafka {
+        bootstrap_servers => "kafka:9092"
+        topics => ["auditbeat"]
+        codec => "json"
+        tags => ["auditbeat"]
+        enable_metric => "true"
+        type => "log"
+        client_id => "auditbeat"
+      }
+      kafka {
+        bootstrap_servers => "kafka:9092"
+        topics => ["heartbeat"]
+        codec => "json"
+        tags => ["heartbeat"]
+        enable_metric => "true"
+        type => "log"
+        client_id => "heartbeat"
+      }
+      kafka {
+        bootstrap_servers => "kafka:9092"
+        topics => ["metricbeat"]
+        codec => "json"
+        tags => ["metricbeat"]
+        enable_metric => "true"
+        type => "log"
+        client_id => "metricbeat"
+      }
+
     }
+  filter_main: |-
     filter {
-        grok {
-          match => { "message" => "%{TIMESTAMP_ISO8601:timestamp}%{SPACE}\[%{GREEDYDATA:transaction.id},%{SPACE}%{GREEDYDATA:trace.id}\]%{SPACE}%{LOGLEVEL:level}%{SPACE}%{SPACE}%{INT:tenant_id}%{SPACE}-%{SPACE}-%{SPACE}-%{SPACE}\[(?<thread>[^\]]+)\]%{SPACE}%{JAVACLASS:java_class}%{SPACE}:%{GREEDYDATA:log_message}" }
-        }
-        kv {
-          include_keys => [ "transaction.id", "trace.id" ]
-          source => "mdc"
-        }
-        mutate {
-                convert => { "transaction.id" => "string" }
-            }
-        mutate {
-            convert => { "trace.id" => "string" }
-        }
+
+      if [topics] == "filebeat" {
+
+          grok {
+              match => { "message" => "%{TIMESTAMP_ISO8601:timestamp}%{SPACE}\[%{GREEDYDATA:transaction.id},%{SPACE}%{GREEDYDATA:trace.id}\]%{SPACE}%{LOGLEVEL:level}%{SPACE}%{SPACE}%{INT:tenant_id}%{SPACE}-%{SPACE}-%{SPACE}-%{SPACE}\[(?<thread>[^\]]+)\]%{SPACE}%{JAVACLASS:java_class}%{SPACE}:%{GREEDYDATA:log_message}" }
+          }
+
+          kv {
+              include_keys => [ "transaction.id", "trace.id" ]
+              source => "mdc"
+          }
+
+          mutate {
+              convert => { "transaction.id" => "string" }
+          }
+          mutate {
+              convert => { "trace.id" => "string" }
+          }
+      }
+
     }
+  output_main: |-
     output {
       elasticsearch {
-          hosts => ["elasticsearch:9200"]
-          index => "%{[@metadata][beat]}-%{[@metadata][version]}-%{+YYYY.MM.dd}"
+        hosts => ["elasticsearch:9200"]
+        index => "%{[@metadata][beat]}-%{[@metadata][version]}-%{+YYYY.MM.dd}"
       }
     }
