--- a/k8s-specs/beats/filebeat/daemonset.yml
+++ b/k8s-specs/beats/filebeat/daemonset.yml
@@ -19,10 +19,13 @@ spec:
         args: [
           "-e"
         ]
+        env:
+          - name: POD_NAMESPACE
+            valueFrom:
+              fieldRef:
+                fieldPath: metadata.namespace
         securityContext:
           runAsUser: 0
-          # If using Red Hat OpenShift uncomment this:
-          #privileged: true
         resources:
           limits:
             memory: 200Mi
@@ -54,7 +57,6 @@ spec:
         configMap:
           defaultMode: 0600
           name: filebeat-inputs
-      # data folder stores a registry of read status for all files, so we don't send everything again on a Filebeat pod restart
       - name: data
         hostPath:
           path: /var/lib/filebeat-data
