added backend support updated readme added k8s version

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 workspace.code-workspace.idea/
 workspace.code-workspace
 .idea
-terraform/.terraform.tfstate.lock.info
+terraform/.terraform
 terraform/terraform.tfstate
-terraform/.terraform/plugins/darwin_amd64/lock.json
-terraform/.terraform/plugins/darwin_amd64/terraform-provider-azurerm_v1.22.0_x4
+terraform/terraform.tfstate.backup
