--- a/k8s-specs/apm-server/configmap.yml
+++ b/k8s-specs/apm-server/configmap.yml
@@ -11,25 +11,26 @@ data:
     apm-server:
       host: "0.0.0.0:8200"
 
-    setup.dashboards.enabled: true
+    setup:
+      kibana:
+        host: "http://kibana:5601"
+      dashboards:
+        enabled: true
+        index: "apm-server-*"
+      template:
+        enabled: false
+    
+    xpack.monitoring:
+      enabled: false
+      elasticsearch:
+        hosts: ["http://elasticsearch:9200"]
 
-    setup.kibana:
-      host: "http://kibana:5601"
-
-    xpack.monitoring.enabled: true
-
-    output.elasticsearch:
-      hosts: ["http://elasticsearch:9200"]
-      indices:
-        - index: "apm-%{[beat.version]}-sourcemap"
-          when.contains:
-            processor.event: "sourcemap"
-        - index: "apm-%{[beat.version]}-error-%{+yyyy.MM.dd}"
-          when.contains:
-            processor.event: "error"
-        - index: "apm-%{[beat.version]}-transaction-%{+yyyy.MM.dd}"
-          when.contains:
-            processor.event: "transaction"
-        - index: "apm-%{[beat.version]}-span-%{+yyyy.MM.dd}"
-          when.contains:
-            processor.event: "span"
+    output.kafka:
+      hosts: ["kafka:9092"]
+      topics:
+      - topic: 'apm-%{[processor.event]}'
+      partition.round_robin:
+        reachable_only: false
+      required_acks: 1
+      compression: gzip
+      max_message_bytes: 1000000
