--- a/k8s-specs/logstash/configmap.yml
+++ b/k8s-specs/logstash/configmap.yml
@@ -28,7 +28,6 @@ data:
         topics => ["filebeat"]
         codec => "json"
         tags => ["filebeat"]
-        enable_metric => "true"
         type => "filebeat"
       }
       kafka {
@@ -36,7 +35,6 @@ data:
         topics => ["packetbeat"]
         codec => "json"
         tags => ["packetbeat"]
-        enable_metric => "true"
         type => "log"
         client_id => "packetbeat"
       }
@@ -45,7 +43,6 @@ data:
         topics => ["auditbeat"]
         codec => "json"
         tags => ["auditbeat"]
-        enable_metric => "true"
         type => "log"
         client_id => "auditbeat"
       }
@@ -54,7 +51,6 @@ data:
         topics => ["heartbeat"]
         codec => "json"
         tags => ["heartbeat"]
-        enable_metric => "true"
         type => "log"
         client_id => "heartbeat"
       }
@@ -63,11 +59,17 @@ data:
         topics => ["metricbeat"]
         codec => "json"
         tags => ["metricbeat"]
-        enable_metric => "true"
         type => "log"
         client_id => "metricbeat"
       }
-
+      kafka {
+        bootstrap_servers => "kafka:9092"
+        topics_pattern => "apm.*"
+        codec => "json"
+        tags => ["apm"]
+        type => "log"
+        client_id => "apm-server"
+      }
     }
   filter_main: |-
     filter {
@@ -94,8 +96,8 @@ data:
     }
   output_main: |-
     output {
-      elasticsearch {
-        hosts => ["elasticsearch:9200"]
-        index => "%{[@metadata][beat]}-%{[@metadata][version]}-%{+YYYY.MM.dd}"
-      }
+        elasticsearch {
+          hosts => ["elasticsearch:9200"]
+          index => "%{[@metadata][beat]}-%{[@metadata][version]}-%{+YYYY.MM.dd}"
+        }
     }
