--- a/k8s-specs/elasticsearch/statefulset.yml
+++ b/k8s-specs/elasticsearch/statefulset.yml
@@ -26,10 +26,7 @@ spec:
         image: "busybox:1.27.2"
         command: ["sysctl", "-w", "vm.max_map_count=262144"]
       containers:
-      - env:
-        - name: ES_JAVA_OPTS
-          value: -Xms512m -Xmx512m
-        image: docker.elastic.co/elasticsearch/elasticsearch:6.6.1
+      - image: docker.elastic.co/elasticsearch/elasticsearch:6.6.1
         name: elasticsearch
         ports:
         - containerPort: 9200
@@ -38,44 +35,10 @@ spec:
           protocol: TCP
           name: transport
         readinessProbe:
-          failureThreshold: 3
-          initialDelaySeconds: 10
-          periodSeconds: 10
-          successThreshold: 3
-          timeoutSeconds: 5
-          exec:
-            command: 
-              - sh
-              - -c
-              - |
-                #!/usr/bin/env bash -e
-                # If the node is starting up wait for the cluster to be green
-                # Once it has started only check that the node itself is responding
-                START_FILE=/tmp/.es_start_file
-
-                http () {
-                    local path="${1}"
-                    if [ -n "${ELASTIC_USERNAME}" ] && [ -n "${ELASTIC_PASSWORD}" ]; then
-                      BASIC_AUTH="-u ${ELASTIC_USERNAME}:${ELASTIC_PASSWORD}"
-                    else
-                      BASIC_AUTH=''
-                    fi
-                    curl -XGET -s -k --fail ${BASIC_AUTH} http://127.0.0.1:9200${path}
-                }
-  
-                if [ -f "${START_FILE}" ]; then
-                    echo 'Elasticsearch is already running, lets check the node is healthy'
-                    http "/"
-                else
-                    echo 'Waiting for elasticsearch cluster to become yellow'
-                    if http "/_cluster/health?wait_for_status=yellow&timeout=1s" ; then
-                        touch ${START_FILE}
-                        exit 0
-                    else
-                        echo 'Cluster is not yet yellow'
-                        exit 1
-                    fi
-                fi
+          httpGet:
+            path: /_cluster/health?local=true
+            port: 9200
+          initialDelaySeconds: 5
         volumeMounts:
           - name: elasticsearch-data
             mountPath: /usr/share/elasticsearch/data
